--- a/prokudin-gorskii/index.html
+++ b/prokudin-gorskii/index.html
@@ -53,7 +53,8 @@
     <meta property="og:title" content="Prokudin-Gorskii">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Prokudin-Gorskii.html" data-home-page-title="Prokudin-Gorskii" class="u-body"><header class="u-clearfix u-header u-header" id="sec-6b2a"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Prokudin-Gorskii.html" data-home-page-title="Prokudin-Gorskii" class="u-body">
+    <header class="u-clearfix u-header u-header" id="sec-6b2a"><div class="u-clearfix u-sheet u-sheet-1">
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; text-transform: uppercase;">
             <a class="u-button-style u-custom-active-border-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
@@ -88,9 +89,11 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70" wfd-invisible="true"></div>
           </div>
         </nav>
+        <a href="https://normankarr.com/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">Norman Karr</a>
         <a href="https://normankarr.com/computational-photography/prokudin-gorskii/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">Prokudin Gorskii</a>
         <a href="https://normankarr.com/computational-photography/filters-and-frequencies/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-2">Filters and Frequencies</a>
-      </div></header> 
+      </div>
+    </header> 
     <section class="u-clearfix u-white u-section-1" id="sec-cdc1">
       <div class="u-expanded-width u-palette-1-base u-shape u-shape-rectangle u-shape-1"></div>
       <div class="u-palette-3-base u-shape u-shape-rectangle u-shape-2"></div>
