added home links

--- a/filters-and-frequencies/index.html
+++ b/filters-and-frequencies/index.html
@@ -74,8 +74,9 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70" wfd-invisible="true"></div>
           </div>
         </nav>
-        <a href="https://normankarr.com/computational-photography/prokudin-gorskii/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">Prokudin Gorskii</a>
-        <a href="https://normankarr.com/computational-photography/filters-and-frequencies/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-2">Filters and Frequencies</a>
+        <a href="https://normankarr.com/" class="u-active-none u-border-2 u-border-palette-0-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-1">Norman Karr</a>
+        <a href="https://normankarr.com/computational-photography/prokudin-gorskii/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-2">Prokudin Gorskii</a>
+        <a href="https://normankarr.com/computational-photography/filters-and-frequencies/" class="u-active-none u-border-2 u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-btn-3">Filters and Frequencies</a>
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="carousel_dc4d" data-image-width="1036" data-image-height="598">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
