--- a/prokudin-gorskii/index.html
+++ b/prokudin-gorskii/index.html
@@ -941,6 +941,8 @@
     <footer class="u-align-center u-clearfix u-footer u-palette-2-base u-footer" id="sec-b583"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Norman Karr&nbsp;<br>CS194-26: Computer Vision and Computational Photography<br>Project 1: Colorizing the Prokudin-Gorskii Collection
         </p>
-      </div></footer>
+        <a href="#top">Back to top</a>
+      </div>
+    </footer>
   </body>
 </html>
